--- a/hi-records/index.html
+++ b/hi-records/index.html
@@ -5,6 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="./assets/hi-records-logo.svg" alt="Hi Records Logo" srcset="" />
+    </header>
+
+    <main>
+      <div class="canvas-holder">
+        <canvas> </canvas>
+      </div>
+
+      <div class="info">
+        <section>
+          <p>SUP006</p>
+          <h2>Pharmacy Sayings</h2>
+          <h3>A Picture Of A Stranger</h3>
+          <p>Vinyl / Download8</p>
+        </section>
+        <section>
+          <p>SUP005</p>
+          <h2>Various Artists</h2>
+          <h3>Songs of Love and Death</h3>
+          <p>Vinyl / CD / Download</p>
+        </section>
+        <section>
+          <p>SUP004</p>
+          <h2>Favorite Hunks</h2>
+          <h3>Sound Of Daylight</h3>
+          <p>Sold out</p>
+        </section>
+      </div>
+    </main>
+
+    <script src="./assets/glslcanvas.min.js"></script>
+    <script src="./include.js"></script>
+    <script src="./frag.js"></script>
+    <script src="./canvas.js"></script>
+  </body>
 </html>
