--- a/cryptoquartz/index.html
+++ b/cryptoquartz/index.html
@@ -22,5 +22,10 @@
 
       <div class="save"><button>Save</button></div>
     </main>
+    <script src="./assets/three.min.js"></script>
+    <script src="includes.js"></script>
+    <script src="vert.js"></script>
+    <script src="frag.js"></script>
+    <script src="canvas.js"></script>
   </body>
 </html>
