--- a/cryptoquartz/index.html
+++ b/cryptoquartz/index.html
@@ -18,7 +18,33 @@
         <!-- here be three.js -->
       </section>
 
-      <form>Updatable things</form>
+      <form>
+        <div>
+          <label for="">Roundness</label>
+          <input
+            type="range"
+            name="roundness"
+            id=""
+            min="0"
+            max="1"
+            step="0.01"
+            value="0.5"
+          />
+        </div>
+
+        <div>
+          <label for="">Roughness</label>
+          <input
+            type="range"
+            name="roughness"
+            id=""
+            min="0"
+            max="0.3"
+            step="0.01"
+            value="0.1"
+          />
+        </div>
+      </form>
 
       <div class="save"><button>Save</button></div>
     </main>
