add slider for light strength

--- a/cryptoquartz/index.html
+++ b/cryptoquartz/index.html
@@ -44,6 +44,19 @@
             value="0.1"
           />
         </div>
+
+        <div>
+          <label for="light">Light strength</label
+          ><input
+            type="range"
+            name="lightStrength"
+            id=""
+            min="0"
+            max="1"
+            step="0.01"
+            value="0.9"
+          />
+        </div>
       </form>
 
       <div class="save"><button>Save</button></div>
