--- a/cryptoquartz/index.html
+++ b/cryptoquartz/index.html
@@ -46,6 +46,45 @@
         </div>
 
         <div>
+          <label for="saturation">Saturation</label
+          ><input
+            type="range"
+            name="saturation"
+            id=""
+            min="0"
+            max="1"
+            step="0.01"
+            value="0.9"
+          />
+        </div>
+
+        <div>
+          <label for="gradientMix">Gradient Mix</label
+          ><input
+            type="range"
+            name="gradientMix"
+            id=""
+            min="0.01"
+            max="5"
+            step="0.01"
+            value="1"
+          />
+        </div>
+
+        <div>
+          <label for="brightness">Brightness</label
+          ><input
+            type="range"
+            name="brightness"
+            id=""
+            min="0"
+            max="1"
+            step="0.01"
+            value="0.9"
+          />
+        </div>
+
+        <div>
           <label for="light">Light strength</label
           ><input
             type="range"
