set up html slideshow

--- a/cloth-studios/index.html
+++ b/cloth-studios/index.html
@@ -24,5 +24,7 @@
       <img src="./assets/image2.jpg" />
       <img src="./assets/image3.jpg" />
     </section>
+
+    <script src="slides.js"></script>
   </body>
 </html>
