--- a/cloth-studios/index.html
+++ b/cloth-studios/index.html
@@ -19,9 +19,9 @@
       </nav>
     </header>
 
-    <section>
-      <img src="./assets/image1.jpg" />
-    </section>
+    <section></section>
+
+    <script src="./assets/three.min.js"></script>
 
     <script src="slides.js"></script>
   </body>
