--- a/cloth-studios/index.html
+++ b/cloth-studios/index.html
@@ -23,6 +23,9 @@
 
     <script src="./assets/three.min.js"></script>
 
+    <script src="includes.js"></script>
+    <script src="vert.js"></script>
+    <script src="frag.js"></script>
     <script src="slides.js"></script>
   </body>
 </html>
